--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,34 @@
 {
-    "manifest_version": 3,
-    "name": "Night Mode",
-    "version": "1.0.1",
-    "description": "Automatically switches light-themed websites to a night light mode for easier reading.",
-    "permissions": ["activeTab", "scripting"],
-    "background": {
-      "service_worker": "background.js"
-    },
-    "content_scripts": [
-      {
-        "matches": ["<all_urls>"],
-        "js": ["content.js"],
-        "run_at": "document_end"
-      }
-    ],
-    "action": {
-      "default_popup": "popup.html",
-      "default_icon": "icon.png"
+  "manifest_version": 3,
+  "name": "Night Mode",
+  "version": "1.0.0",
+  "description": "Automatically switches light-themed websites to a night light mode for easier reading.",
+  "permissions": [
+    "activeTab",
+    "scripting",
+    "tabs"
+  ],
+  "host_permissions": [
+    "<all_urls>"
+  ],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "icons": {
+    "128": "icon.png"
+  },
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": "icon.png"
+  },
+  "content_scripts": [
+    {
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "content.js"
+      ]
     }
-  }
-  
+  ]
+}
